omweather (0.24) unstable; urgency=low

  * Various small fixes

 -- Vlad Vasiliev <vlad@gas.by>  Thu, 11 Aug 2009 18:30:00 +0200

omweather (0.23.3) unstable; urgency=low

  * Modified acknowledgment and copyright lists
  * Various small fixes
  * Fixed memory leaks
  * Corrected behaviour of details weather forecasts for a current day

 -- Vlad Vasiliev <vlad@gas.by>  Thu, 11 Aug 2009 18:30:00 +0200

omweather (0.23.2) unstable; urgency=low

  * Fixed problem with switching between stations if stations list has nil stations 
  * Fixed problem with detailed weather for current day
  * Now next station changing in inside popup window without destroying it
  * Fixed problem with scrolling in popup window
  * Done feature request from Daniel Wilms "automatically connect to gps service after selecting of gps station"

 -- Vlad Vasiliev <vlad@gas.by>  Thu, 07 Jun 2009 18:30:00 +0200

omweather (0.23.1) unstable; urgency=low

  * Done scroll to child for pannable_area in window popup
  * Added button 'Clear' for window 'Configuring station'
  * Removed 'Expanded/Collapsed' togglebuttons in status window

 -- Vlad Vasiliev <vlad@gas.by>  Thu, 06 Jun 2009 18:30:00 +0200

omweather (0.23) unstable; urgency=low

  * New design

 -- Vlad Vasiliev <vlad@gas.by>  Wed, 05 Jun 2009 10:30:00 +0200


omweather (0.22.4) unstable; urgency=low

  * Fixed small memory leaks
  * Corrected package icon
  * Fixed various small bugs
  * Removed from package not using png and json files
  * Fixed problem with crashing applet after changing orientation of device (Fremantle)
  * Enabled GPS check box for Fremantle 

 -- Vlad Vasiliev <vlad@gas.by>  Wed, 21 Jun 2009 20:30:00 +0200

omweather (0.22.3) unstable; urgency=low

  * Added dependence on the omweather-source
  * Fixed small memory leaks
  * Option 'hours  weather forecast' is enabled by default now

 -- Vlad Vasiliev <vlad@gas.by>  Wed, 17 Jun 2009 20:50:00 +0200

omweather (0.22.2) unstable; urgency=low
