@@ -6,3 +6,5 @@ X-Path=libweather-home.so
 X-home-applet-minwidth=64
 X-home-applet-minheight=64
 X-home-applet-maxheight=410
+X-Text-Domain=OMWeather
+X-Multiple-Instances=false
