@@ -5,7 +5,11 @@ gtk-update-icon-cache -f /usr/share/icons/hicolor
 #if first installation then exit
 if [ -z "$2" ]; then
     exit 0
-fi 
+fi
+
+if test ! -f  /usr/share/applications/hildon-home/omweather-home.desktop ; then
+    cp /usr/share/omweather/omweather-home.desktop /usr/share/applications/hildon-home/omweather-home.desktop
+fi
 
 #For OS2008
 test -x /usr/bin/maemo-confirm-text || exit 0
